# ust-dialect

./: .gitmodules  CMakeLists.txt  README.md  setup.py
docs/: AddNewPass.md  AddPythonBinding.md  GettingStartedWithMLIR.md
include/: CMakeLists.txt
include/ust/: CMakeLists.txt
include/ust-c/Dialect/: Registration.h
include/ust-c/Translation/: EmitVivadoHLS.h
include/ust/Bindings/: CMakeLists.txt
include/ust/Bindings/Python/: CMakeLists.txt  USTModule.h  setup.py
include/ust/Bindings/Python/ust/: __init__.py  build_ir.py  exceptions.py
include/ust/Bindings/Python/ust/dialects/: ust.py
include/ust/Dialect/: CMakeLists.txt  USTAttrs.h  USTAttrs.td  USTDialect.h  USTDialect.td  USTOps.td  USTTypes.h  USTTypes.td  Visitor.h
include/ust/Support/: Utils.h
include/ust/Transforms/: CMakeLists.txt  Passes.h  Passes.td
include/ust/Translation/: EmitVivadoHLS.h  Utils.h
lib/: CMakeLists.txt
lib/Bindings/Python/: USTModule.cpp
lib/CAPI/: CMakeLists.txt
lib/CAPI/Dialect/: CMakeLists.txt  Registration.cpp
lib/CAPI/Translation/: CMakeLists.txt  EmitVivadoHLS.cpp
lib/Dialect/: CMakeLists.txt  USTDialect.cpp
lib/Support/: CMakeLists.txt  Utils.cpp
lib/Transforms/: CMakeLists.txt  LoopBoundConstant.cpp  PassDetail.h  Passes.cpp  SetSparseInfo.cpp
lib/Translation/: CMakeLists.txt  EmitVivadoHLS.cpp  Utils.cpp
test/Bindings/: test_codegen.py  test_pass.py  test_py2hls.py  test_ustp.py
test/SparseTensor/: csr_spmv.mlir
test/SparseTensor/codegen_output/: csr_spmv_codegen.cpp
test/SparseTensor/examples/: csr_spmv.mlir
test/SparseTensor/opt_output/: csr_spmv_opt.mlir
tools/: CMakeLists.txt
tools/ust-opt/: CMakeLists.txt  ust-opt.cpp
tools/ust-translate/: CMakeLists.txt  ust-translate.cpp
ustp/: __init__.py  customize.py
ustp/backend/: hls.py
